<resources>
    <string name="app_name">Sawa</string>
    <string name="logo">Logo</string>
    <string name="menu">Menu</string>
    <string name="button">button</string>
    <string name="tap_to_check_in">Tap To Check-In</string>
    <string name="all">All</string>
    <string name="retail">Retail</string>
    <string name="banks">Banks</string>
    <string name="government">Government</string>
    <string name="entertainment">Entertainment</string>
    <string name="telecommunication">Telecommunication</string>
    <string name="education">Education</string>
    <string name="insurance">Insurance</string>
    <string name="travel">Travel</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="capacity_light">Light</string>
    <string name="capacity_moderator">Moderator</string>
    <string name="capacity_closed">Closed</string>
    <string name="capacity_crowded">Crowded</string>
    <string name="where_to">Where to?</string>
    <string name="back">back</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="or_login_with">Or login with</string>
    <string name="create_account">Create Account</string>
    <string name="health">Health</string>
    <string name="you_have_checked_in">You have checked-in</string>
    <string name="branch">Branch:</string>

    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="place_the_qr_code_inside_the_frame_check_in">Place the QR code inside the frame check-in</string>
    <string name="Capacity">Capacity:</string>
    <string name="duration">Duration: %1$s</string>
    <string name="time">Check-in time: %1$s</string>
    <string name="offers">Offers</string>
    <string name="another_place">Check-in another place</string>
    <string name="Check_out">Check-out</string>
    <string name="thank_for_visiting">Thank you for visiting %1$s branch</string>
    <string name="rate_experience">Rate your experience</string>
    <string name="spent_duration">You have spent %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="later">Maybe later</string>
    <string name="save">Save</string>
    <string name="access_camera">Application can\'t access the camera</string>
    <string name="email_address_is_required" translatable="false">email address is required</string>
    <string name="enter_valid_email_address" translatable="false">enter valid email</string>


</resources>