<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="28dp"
        android:paddingTop="8dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="?mainColor"
        app:strokeWidth="2dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_drawer_items_separated_line"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="33dp"
        android:background="#DBDBDB"
        app:layout_constraintBottom_toTopOf="@+id/login_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="19.5dp"
        android:text="@string/or_login_with"
        android:textColor="#707070"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <ImageView
        android:id="@+id/login_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="@dimen/navigation_drawer_login_margin_bottom"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_facebook"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="@dimen/navigation_drawer_login_margin_bottom"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_google"
        app:layout_constraintStart_toEndOf="@+id/login_apple" />

    <ImageView
        android:id="@+id/login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/navigation_drawer_login_margin_bottom"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_facebook" />
</androidx.constraintlayout.widget.ConstraintLayout>